--- a/CLASE_06 - TP2/formulario.html
+++ b/CLASE_06 - TP2/formulario.html
@@ -74,50 +74,52 @@
         <div class="container-fluid">
             <form action="" method="post" id="form-suscripcion">
                 <h2 class="title">FORMULARIO DE SUSCRIPCIÓN</h2>
+                <h4 id="saludo-dinamico">HOLA</h4>
                 <div class="form-layout">
                     <div class="form-group">
                         <label for="input-nombre">Nombre Completo</label>
-                        <input type="text" id="input-nombre" name="input-nombre" required>
+                        <input type="text" id="input-nombre" name="input-nombre">
                         <span class="input-error" id="input-nombre-error"></span>
                     </div>
                     <div class="form-group">
                         <label for="input-email">Email</label>
-                        <input type="text" id="input-email" name="input-email" required>
+                        <input type="text" id="input-email" name="input-email">
                         <span class="input-error" id="input-email-error"></span>
                     </div>
                     <div class="form-group">
                         <label for="input-pass">Contraseña</label>
-                        <input type="text" id="input-pass" name="input-pass" required>
+                        <input type="text" id="input-pass" name="input-pass">
                         <span class="input-error" id="input-pass-error"></span>
                     </div>
                     <div class="form-group">
                         <label for="input-edad">Edad</label>
-                        <input type="text" id="input-edad" name="input-edad" required>
+                        <input type="text" id="input-edad" name="input-edad">
                         <span class="input-error" id="input-edad-error"></span>
                     </div>
                     <div class="form-group">
                         <label for="input-tel">Teléfono</label>
-                        <input type="text" id="input-tel" name="input-tel" required>
+                        <input type="text" id="input-tel" name="input-tel">
                         <span class="input-error" id="input-tel-error"></span>
                     </div>
                     <div class="form-group">
                         <label for="input-dir">Dirección</label>
-                        <input type="text" id="input-dir" name="input-dir" required>
+                        <input type="text" id="input-dir" name="input-dir">
                         <span class="input-error" id="input-dir-error"></span>
                     </div>
                     <div class="form-group">
                         <label for="input-ciudad">Ciudad</label>
-                        <input type="text" id="input-ciudad" name="input-ciudad" required>
+                        <input type="text" id="input-ciudad" name="input-ciudad">
                         <span class="input-error" id="input-ciudad-error"></span>
                     </div>
                     <div class="form-group">
                         <label for="input-cp">Código Postal</label>
-                        <input type="text" id="input-cp" name="input-cp" required>
+                        <input type="text" id="input-cp" name="input-cp">
                         <span class="input-error" id="input-cp-error"></span>
                     </div>
                     <div class="form-group">
                         <label for="input-dni">DNI</label>
-                        <input type="text" id="input-dni" name="input-dni" required>
+                        <input type="text" id="input-dni" name="input-dni">
+                        <span class="input-error" id="input-error-dni"></span>
                     </div>
                     <div class="form-button">
                         <button type="submit">ENVIAR</button>
@@ -131,6 +133,9 @@
     <footer>
         <p>&copy; 2025 Diario Pasión Xeneize. Todos los derechos reservados.</p>
     </footer>
+
+    <script src="js/formulario.js"></script>
+
 
 </body>
 
