actualización de campo de password y edad y dni

--- a/CLASE_06 - TP2/formulario.html
+++ b/CLASE_06 - TP2/formulario.html
@@ -88,12 +88,12 @@
                     </div>
                     <div class="form-group">
                         <label for="input-pass">Contraseña</label>
-                        <input type="text" id="input-pass" name="input-pass">
+                        <input type="password" id="input-pass" name="input-pass">
                         <span class="input-error" id="input-pass-error"></span>
                     </div>
                     <div class="form-group">
                         <label for="input-edad">Edad</label>
-                        <input type="text" id="input-edad" name="input-edad">
+                        <input type="number" id="input-edad" name="input-edad">
                         <span class="input-error" id="input-edad-error"></span>
                     </div>
                     <div class="form-group">
@@ -118,7 +118,7 @@
                     </div>
                     <div class="form-group">
                         <label for="input-dni">DNI</label>
-                        <input type="text" id="input-dni" name="input-dni">
+                        <input type="number" id="input-dni" name="input-dni">
                         <span class="input-error" id="input-error-dni"></span>
                     </div>
                     <div class="form-button">
